add parse login & service

--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
   
   <! Parse -->
   <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
+  
   <script type="text/javascript">
     
     Parse.initialize("asdvt6Fgkapis3dncjZdf"); 
-    Parse.serverURL = 'https://piegaserver.herokuapp.com//parse'
+    Parse.serverURL = 'https://piegaserver.herokuapp.com/parse'
   </script>
+  
 </body>
 </html>
