--- a/pages/login.html
+++ b/pages/login.html
@@ -3,16 +3,16 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h3 class="panel-title">Please Sign In </h3>
                     </div>
                     <div class="panel-body">
                         <form role="form">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                    <input class="form-control" placeholder="Username" name="username" type="test" ng-model="username" autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="Password" name="password" type="password" ng-model="password">
                                 </div>
                                 <div class="checkbox">
                                    <!-- <label>
@@ -20,7 +20,8 @@
                                     </label>-->
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a href="index.html" class="btn btn-lg btn-success btn-block" ng-click="logIn()">Login</a>
+                                <a href="" class="btn btn-lg btn-default btn-block" ng-click="logOut()">Logout</a>
                             </fieldset>
                         </form>
                     </div>
