--- a/pages_components/nav.html
+++ b/pages_components/nav.html
@@ -7,7 +7,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+                <a class="navbar-brand" href="index.html">Hello</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -22,7 +22,7 @@
                         <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a ui-sref="login"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a ><i class="fa fa-sign-out fa-fw" ng-click="logOut()"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -50,6 +50,9 @@
                         </li>
                         <li>
                             <a ui-sref= "addAxes"><i class="fa fa-bar-chart-o fa-fw"></i> Add Axes<span class="fa arrow"></span></a>
+                        </li>
+                        <!-- <li>
+                            <a ui-sref= "addAxes"><i class="fa fa-bar-chart-o fa-fw"></i> Add Axes<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="flot.html">Flot Charts</a>
@@ -58,8 +61,7 @@
                                     <a href="morris.html">Morris.js Charts</a>
                                 </li>
                             </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
