--- a/pages_components/tables.html
+++ b/pages_components/tables.html
@@ -1,6 +1,6 @@
 <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Tables</h1>
+                    <h1 class="page-header">Hello, {{sessionUser.username}} </h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -8,7 +8,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            DataTables Advanced Tables
+                            DataTables Advanced Tablese
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
