--- a/app/pages_components/add.html
+++ b/app/pages_components/add.html
@@ -36,7 +36,7 @@
                                             <input type="file">
                                          </div>    
                                         <div class="col-md-4">
-                                            <label>Comment</label>
+                                            <label>CommentPietro</label>
                                             <input class="form-control">
                                         </div>
                                         </div>
