--- a/app/pages_components/add.html
+++ b/app/pages_components/add.html
@@ -23,8 +23,8 @@
                                             <label>Fzg Nr.</label>
                                             <input class="form-control" ng-model= "fzgNr">
                                         </div>
-                                        <div class="col-md-3">
-                                            <label>Statuss</label>
+                                        <div class="col-md-4">
+                                            <label>Status</label>
                                             <div>
                                               <button type="button" class="btn btn-success" ng-model="state" value=true >Ok</button>
                                               <button type="button" class="btn btn-danger" ng-model="axeState" value=false >Not Ok</button>
@@ -44,10 +44,10 @@
                             </form>
                             
                             
-                            <div class="col-md-4 pull-right" style="margin-top:20px">
-                                <div class="col-md-2 pull-right">  
-                                <a class="btn btn-default " target="_blank" href="">Cancel</a>
-                                <a class=" btn btn-primary" target="_blank" ng-click="addAxe()">Save</a>
+                            <div class="col-md-4" style="margin-top:20px">
+                                <div class="col-md-4">  
+                                <button class="btn btn-default "  href="">Cancel</button>
+                                <button class=" btn btn-primary"  ng-click="addAxe()">Save</button>
                                 </div>
                             </div>
                         </div>
