--- a/app/index.html
+++ b/app/index.html
@@ -40,13 +40,13 @@
   <div ui-view></div>
 
         <!-- jQuery -->
-    <script src="/app/vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/app/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="/app/vendor/metisMenu/metisMenu.min.js"></script>
+    <script src="vendor/metisMenu/metisMenu.min.js"></script>
 
     <!-- Morris Charts JavaScript -->
     <script src= "/app/vendor/raphael/raphael.min.js"></script>
@@ -69,9 +69,8 @@
   <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
   
   <script type="text/javascript">
-    
-    Parse.initialize("asdvt6Fgkapis3dncjZdf"); 
-    Parse.serverURL = 'https://piegaserver.herokuapp.com/parse'
+    Parse.initialize("asda65daidb8dGkiaxasonGDsr"); 
+    Parse.serverURL = 'https://pietroserver.herokuapp.com/parse'
   </script>
   
 </body>
