--- a/app/pages_components/nav.html
+++ b/app/pages_components/nav.html
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Hello, {{sessionUser.id}}</a>
+                <a class="navbar-brand" href="index.html">User: {{user.username}}</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -49,7 +50,7 @@
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a ui-sref= "addAxes"><i class="fa fa-bar-chart-o fa-fw"></i> Add Axes<span class="fa arrow"></span></a>
+                            <a ui-sref= "addAxes"><i class="fa fa-bar-chart-o fa-fw"></i> Neue RSW einfügen</a>
                         </li>
                         <!-- <li>
                             <a ui-sref= "addAxes"><i class="fa fa-bar-chart-o fa-fw"></i> Add Axes<span class="fa arrow"></span></a>
@@ -68,3 +69,4 @@
             </div>
             <!-- /.navbar-static-side -->
         </nav>
+        
