--- a/app/pages_components/tables.html
+++ b/app/pages_components/tables.html
@@ -1,6 +1,6 @@
 <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Hello, {{sessionUser.username}} </h1>
+                    <h1 class="page-header">Hallo, {{user.username}} </h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -8,34 +8,27 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            DataTables Advanced Tablese
+                            Letze 10 gespeicherte Welle
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
                                     <tr>
-                                        <th>Axe Nr.</th>
-                                        <th>Browser</th>
-                                        <th>Platform(s)</th>
-                                        <th>Engine version</th>
-                                        <th>CSS grade</th>
+                                        <th>RS-Welle Nr.</th>
+                                        <th>Fzg Nr.</th>
+                                        <th>Status</th>
+                                        <th>Datum</th>
+                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="odd gradeX">
-                                        <td>Trident</td>
-                                        <td>Internet Explorer 4.0</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">4</td>
-                                        <td class="center">X</td>
-                                    </tr>
-                                    <tr class="gradeU">
-                                        <td>Other brasss</td>
-                                        <td>All others</td>
-                                        <td>-</td>
-                                        <td class="center">-</td>
-                                        <td class="center">U</td>
+                                    <tr class="gradeU" ng-repeat= "d in resultData">
+                                        <td>{{d.axeNr}}</td>
+                                        <td>{{d.fzgNr}}</td>
+                                        <td >{{d.state}}</td>
+                                        <td >{{d.createdAt}}</td>
+                                        <th><button class="btn btn-default"><i class="fa fa-edit"></i></button></th>
                                     </tr>
                                 </tbody>
                             </table>
