--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="bower_components/angular-growl/build/angular-growl.min.css" type="text/css" />
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   
+  <link rel="stylesheet" href="bower_components/allmighty-autocomplete/style/autocomplete.css">
+  
       <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
      <!-- Bootstrap Core CSS -->
@@ -67,6 +69,8 @@
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
   <script src="bower_components/angular-growl/build/angular-growl.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+  <script src="bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
   
   <! Parse -->
   <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
