--- a/app/pages_components/nav.html
+++ b/app/pages_components/nav.html
@@ -33,6 +33,7 @@
             <!-- /.navbar-top-links -->
 
             <div class="navbar-default sidebar" role="navigation">
+                <div growl></div>
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
