--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -1,6 +1,7 @@
  <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
+                <div growl></div>
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">Please Sign In </h3>
@@ -20,7 +21,7 @@
                                     </label>-->
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block" ng-click="logIn()">Login</a>
+                                <a class="btn btn-lg btn-success btn-block" ng-click="logIn()" >Login</a>
                                 <a href="" class="btn btn-lg btn-default btn-block" ng-click="logOut()">Logout</a>
                             </fieldset>
                         </form>
