--- a/app/pages_components/nav.html
+++ b/app/pages_components/nav.html
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+        <div style="index:1" growl></div>
 
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
@@ -33,7 +34,6 @@
             <!-- /.navbar-top-links -->
 
             <div class="navbar-default sidebar" role="navigation">
-                <div growl></div>
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
